# app/controllers/user.server.controllers.js
@@ -1,24 +1,26 @@
 const users = require('../models/user.server.models'),
   log = require('../lib/logger')(),
-  validator = require('../lib/validator');
+  validator = require('../lib/validator'),
+  config = require('../../config/config.js'),
+  schema = require('../../config/seng365-2018_auction_0.0.5_swagger.json');
 
   /**
    * create a new user, from a request body that follows the `User` schema definition
    */
 exports.create = function(req, res){
-  if (false){//!validator.isValidSchema(req.body, 'components.schemas.user')) {
+  if (false){ //!validator.isValidSchema(req.body, 'components.schemas.user')) {
       log.warn(`users.controller.create: bad user ${JSON.stringify(req.body)}`);
       return res.sendStatus(400);
   } else {
       let user = Object.assign({}, req.body);
-      users.insert(user, (err, id) => {
+      users.insert(user, function(err, id){
           if (err)
           {
               log.warn(`user.controller.create: couldn't create ${JSON.stringify(user)}: ${err}`);
               return res.sendStatus(400); // duplicate record
           }
           res.status(201).json({id:id});
-      })
+      });
   }
 }
 
@@ -31,9 +33,53 @@ exports.update = function(req, res){
 }
 
 exports.login = function(req, res){
-  return null;
+    validator.areValidParameters(req.body, schema.paths['/users/login'].post.parameters)
+        .then(function(){
+                //log.warn(`success ${JSON.stringify(req.body)}`);
+
+                let username = '';
+                let email = '';
+                let password = req.body.password;
+
+                //res.status(200).json({username:username,email:email,password:password});
+
+                //check these parameters manually as swagger doesn't allow for oneOf type semantics so email and username are given as optional
+                if (req.body.hasOwnProperty('username')) username = req.body.username;
+                if (req.body.hasOwnProperty('email')) email = req.body.email;
+
+                //res.status(200).json({username:username,email:email,password:password});
+
+                users.authenticate(username, email, password, function(err, id){
+                    console.log(err, id);
+                    if(err) res.status(400).send('Invalid username/email/password supplied');
+
+                    users.getToken(id, function(err, token){
+                        /// return existing token if already set (don't modify tokens)
+                        if (token) return res.status(200).json({id: id, token: token});
+
+                        // but if not, complete login by creating a token for the user
+                        users.setToken(id, function(err, token){
+                           res.status(200).json({id: id, token: token});
+                        });
+
+                    });
+                });
+        })
+        .catch(function(){
+            log.warn(`users.controller.login: bad request ${JSON.stringify(req.body)}`);
+            res.sendStatus(400);
+        });
 }
 
+
+
+
 exports.logout = function(req, res){
-  return null;
+    let token = req.get(config.get('authToken'));
+    users.removeToken(token, function(err){
+        if (err)
+            return res.sendStatus(401);
+        return res.sendStatus(200);
+    });
+    return null;
 }
