# config/seng365-2018_auction_0.0.5_swagger.json
@@ -591,10 +591,7 @@
                     }
                   },
                   {
-                    "$ref": "#/components/schemas/email"
-                  },
-                  {
-                    "$ref": "#/components/schemas/password"
+                    "$ref" : "#/components/schemas/user"
                   }
                 ]
               }
